# ghpool

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.example.yaml
.github/workflows/: ci.yml  e2e.yml  release-pr.yml  release.yml  tag-on-merge.yml
docs/: DESIGN.md  getting-started.md
ghp/: Cargo.toml
ghp/src/: main.rs
ghp/tests/: git_credential_cli.rs
obk/: Cargo.toml
obk/src/: main.rs
obk/tests/: git_credential_cli.rs
scripts/: e2e-mcp.sh
src/: app_token.rs  audit.rs  cache.rs  config.rs  git_credential.rs  main.rs  mcp.rs  policy.rs  pool.rs
